# suCAM

./: .gitignore  CMakeLists.txt  README.md
include/: engines.cpp  engines.h
include/Engines/Utility/: debugStream.cpp  debugStream.h  timing.cpp  timing.h  unitTest.cpp  unitTest.h
python/: .gitignore  css.py  ex6.py  main.py  mkspiral.py  modelInfo.py  pathengin.py  pathengine.py  readme.md  stl2pngfunc.py  stlgenerator.py  suDataStructure.py  suGraph.py  test.py  testPCA.py  testUnit.py  test_3d_partition.py  test_ur.py  toolpath.py  tp021b6d.md
python/Test/: test.py  testRegistration.py  testSerial.py
python/adapters/: __init__.py  adapter.py  utils.py
python/adapters/instances/: ur3.py
python/configs/: .config.json.un~  config.json
python/examples/: Tensile specimen-txt.stl  Tensile specimen.STL  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex_clipper.py  femal.stl  hand.stl  part1.stl  part2.stl  shiyankuai.stl  short.stl  syc_cube_sample-15mm.stl  syc_cube_sample1.stl  syc_cube_sample2-half.stl  syc_cube_sample2.stl
python/todo/: Controller.ui
python/tools/CFPrinting/: .gitignore  Readme.md  VtkAdaptor.py  config.json  debug.py  genCP.py  pipeline.py  pipeline_genGCode.py  test.py  test_show_slice.py  unit_test_.py
shared/cmake/: FindLIBIGL.cmake  FindOpenMesh.cmake  libigl.cmake
src/: suReadOFF.cpp  suReadOFF.h
src/Test_Unit/: CMakeLists.txt  ReadMe.md  config.cpp  config.h  main.cpp
src/suCAM/: CMakeLists.txt  ReadMe.md  main.cpp  plugin_menu.h  plugin_selection.h  suGlobalState.cpp  suGlobalState.h  suViewer.cpp  suViewer.h
src/suCAM/plugins/: plugin_load_off.cpp  plugin_load_off.h  plugin_menu.cpp  plugin_repair_and_export_mesh.cpp  plugin_repair_and_export_mesh.h
(+21 files in other folders)
